# mict

./: .gitignore  LICENSE  README.md  demo.ipynb  demo.pickle  setup.cfg  setup.py
mict/: __init__.py  mict.py  reprstylers_generic.py
mict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
