[metatata]
name = mict
version = 0.0.3
description = extends dict with a handful of usability tools
keywords = dev
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
url = https://github.com/jerzydziewierz/mict/
author = George (Dr Jerzy Dziewierz) Rey
requires =
    numpy

[options]
packages =
    find:

install_requires =
    numpy
    requests
    importlib; python_version == "3.8"


