[metatata]
description = Provides `MATLAB`-like setting/storage of items in a dict (dictionary) and a handful of interactivity tools.'
long-description = file: README.md
keywords = dev, dict, numpy
license = MIT
classifiers =
    Programming Language :: Python :: 3.9
url = https://github.com/jerzydziewierz/mict/
author = George (Dr Jerzy Dziewierz) Rey
requires =
    numpy
    dill


[options]
packages =
    mict

install_requires =
    dill
    numpy
    requests
    python_version > "3.9"

[options.entry_points]
console_scripts =
    main = mict:fn_welcome

