[metatata]
description = Provides `MATLAB`-like setting/storage of items in a dict (dictionary) and a handful of interactivity tools.'
long-description = file: README.md
keywords = dev, dict, numpy
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
url = https://github.com/jerzydziewierz/mict/
author = George (Dr Jerzy Dziewierz) Rey
requires =
    numpy
    dill


[options]
packages =
    mict
python_requires = >=3.8

install_requires =
    dill
    numpy
    requests

[options.entry_points]
console_scripts =
    mict = mict:fn_welcome
    mict2 = mict:fn_welcome2

